Fix OT score and scroll issue on Windows
- Fix OT scores not showing issues
- Fix scrollbar issue on windows for popup
  - Need better solution for box score

- Add a meta viewport tag

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,7 +62,7 @@ table tr:first-child th:last-child {
 #popup_page {
     width: 330px;
     max-height: 400px;
-    overflow: scroll;
+    overflow-y: scroll;
     padding: 0 5px 0 5px;
 }
 
